<resources>
    <string name="app_name">AndroidFundamentalsApril</string>
    <string name="title">Login</string>
    <string name="title_register">Register</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="accept_terms_and_conditions">Accept Terms And Conditions</string>
    <string name="notifications">Notifications</string>
    <string name="login">LOGIN</string>
    <string name="pass">Password</string>

    <array name="data">
        <item>"Oreo"</item>
        <item>"Cupcake"</item>
        <item>"Lollipop"</item>
        <item>"Android Versions"</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="error_occured">Error Occurred</string>
    <string name="retry">Retry</string>
    <string name="retry_message">This is an error, please retry!!</string>
</resources>
