<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayout"
    tools:context=".MainActivityWeek3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/colorYellow">

            <TextView
                android:id="@+id/first_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="First" />

            <TextView
                android:id="@+id/second_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/first_text_view"
                android:text="Left" />

        </RelativeLayout>

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            tools:ignore="WebViewLayout" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@color/colorGreen" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimary" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/colorOrange"
                android:src="@drawable/ic_launcher_foreground" />
        </FrameLayout>

        <Spinner
            android:id="@+id/android_versions_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginDimenLarge"
            android:background="@color/colorYellow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginDimenLarge"
                android:text="@string/login" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginDimenLarge"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_margin="@dimen/marginDimenLarge"
                android:hint="@string/pass" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginDimenLarge"
                android:text="@string/accept_terms_and_conditions"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginDimenLarge"
                android:background="@color/colorPrimary"
                android:text="@string/login" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>